; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_ubc_subr.c_ubc_create_upl_external.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_ubc_subr.c_ubc_create_upl_external.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vnode = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ubc_create_upl_external(%struct.vnode* %0, i32 %1, i32 %2, i32* %3, i32** %4, i32 %5) #0 {
  %7 = alloca %struct.vnode*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i32, align 4
  store %struct.vnode* %0, %struct.vnode** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32** %4, i32*** %11, align 8
  store i32 %5, i32* %12, align 4
  %13 = load %struct.vnode*, %struct.vnode** %7, align 8
  %14 = load i32, i32* %8, align 4
  %15 = load i32, i32* %9, align 4
  %16 = load i32*, i32** %10, align 8
  %17 = load i32**, i32*** %11, align 8
  %18 = load i32, i32* %12, align 4
  %19 = call i32 (...) @vm_tag_bt()
  %20 = call i32 @ubc_create_upl_kernel(%struct.vnode* %13, i32 %14, i32 %15, i32* %16, i32** %17, i32 %18, i32 %19)
  ret i32 %20
}

declare dso_local i32 @ubc_create_upl_kernel(%struct.vnode*, i32, i32, i32*, i32**, i32, i32) #1

declare dso_local i32 @vm_tag_bt(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
